=head1 NAME

Changes - Apache mod_perl change logfile

=head1 CHANGES

all changes without author attribution are by Doug MacEachern

=over 3

=item 1.26_01-dev

added perl_perl_merge_dir_config and array_header2avrv symbols to
mod_perl.def for win32 and mod_perl.exp for aix.
[Randy Kobes <randy@theoryx5.uwinnipeg.ca>]

INSTALL.apaci: added an explanation of how perl has to be built in
order to use DSO without problems (copied from the guide) based on
email from Doug.  [Stas Bekman <stas@stason.org>]

warn if Perl is configured with -Duseshrplib and a libperl.so is found
in a place where it should not be, example: /lib /usr/lib or /usr/local/lib

fix potential segv in Apache::URI->rpath
[Vyacheslav Zamyatin <slawa@w-m.ru>]

require URI::URL to work with newer libwww-perl

allow overriding of container directive handlers using the func parameter
[Geoffrey Young <gyoung@laserlink.net>]

enable directive handler support for TAKE13
[Geoffrey Young <gyoung@laserlink.net>]

=item 1.26 - July 11, 2001

fix 'make test' problem seen with Perl 5.005_03

remove $r->finfo usage from Apache::PerlRun, clearly finfo isn't as
stable as it should be
[Surat Singh Bhati <surat@indiamart.com>]

Apache->server will now point the current VirtualHost when inside a
<Perl> section, thanks to Robin Berjon for the spot

allow per-server and per-location PerlSetEnv to be properly merged
when a per-server handler is configured, thanks to Michael Barry for
the spot

enabled Apache::ModuleConfig on win32
[Randy Kobes <randy@theoryx5.uwinnipeg.ca>]

win32 support for Apache::src [Randy Kobes <randy@theoryx5.uwinnipeg.ca>]

=item 1.25_01 - July 6, 2001

add symbols to mod_perl.exp for aix/axkit

add Apache::add_version_component() function

make sure Apache::ExtUtils can be found when building inside of the
apache source tree, thanks to Jonathan Swartz for the spot

add perl_call_handler to mod_perl.def for win32/axkit
[Randy Kobes <randy@theoryx5.uwinnipeg.ca>]
